--- a/notebook/Process MRMS data.ipynb
+++ b/notebook/Process MRMS data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -14,6 +14,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from __future__ import print_function"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -92,30 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<type 'netCDF4._netCDF4.Dataset'>\n",
-      "root group (NETCDF3_CLASSIC data model, file format NETCDF3):\n",
-      "    creation_date: Wed Jun 29 01:07:13 UTC 2016\n",
-      "    NCL_Version: 6.2.1\n",
-      "    system: Linux mrms-ldm 2.6.32-642.1.1.el6.x86_64 #1 SMP Tue May 31 21:57:07 UTC 2016 x86_64 x86_64 x86_64 GNU/Linux\n",
-      "    Conventions: None\n",
-      "    grib_source: MRMS_GaugeCorr_QPE_01H_00.00_20160628-170000.grib2\n",
-      "    title: NCL: convert-GRIB-to-netCDF\n",
-      "    dimensions(sizes): lat_0(3500), lon_0(7000)\n",
-      "    variables(dimensions): float32 \u001b[4mVAR_209_6_9_P0_L102_GLL0\u001b[0m(lat_0,lon_0), float32 \u001b[4mlat_0\u001b[0m(lat_0), float32 \u001b[4mlon_0\u001b[0m(lon_0)\n",
-      "    groups: \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ncF = Dataset(nc_file_path, mode = 'r')\n",
     "print ncF"
@@ -123,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -136,101 +128,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((3500, 7000), (3500,), (7000,))"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var.shape, lat.shape, lon.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.],\n",
-       "       [-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.],\n",
-       "       [-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.],\n",
-       "       [-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.],\n",
-       "       [-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.],\n",
-       "       [-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.],\n",
-       "       [-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.],\n",
-       "       [-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.],\n",
-       "       [-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.],\n",
-       "       [-3., -3., -3., -3., -3., -3., -3., -3., -3., -3.]], dtype=float32)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var[:10, :10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 54.99499893,  49.99499893,  44.99499893,  39.99499893,\n",
-       "        34.99499893,  29.99500084,  24.99500084], dtype=float32)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lat[:-1:500]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 230.00500488,  235.00500488,  240.00500488,  245.00500488,\n",
-       "        250.00500488,  255.00500488,  260.00500488,  265.00500488,\n",
-       "        270.00500488,  275.00500488,  280.00500488,  285.00500488,\n",
-       "        290.00500488,  295.00500488], dtype=float32)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lon[:-1:500]"
    ]
@@ -244,19 +179,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/htan/proj/TensorFlow/data/MRMS/MRMS_NLDN_LightningDensity/20160628/MRMS_NLDN_LightningDensity_015_min_20160628-170113.nc.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Nldn = 'MRMS_NLDN_LightningDensity/'\n",
     "filename = 'MRMS_NLDN_LightningDensity_015_min_20160628-170113.nc.gz'\n",
@@ -266,19 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/htan/proj/TensorFlow/notebook/temp/temp_NLDN.nc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "outfilename = 'temp_NLDN.nc'\n",
     "nc_file_path = '/home/htan/proj/TensorFlow/notebook/temp/' + outfilename\n",
@@ -287,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -302,30 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<type 'netCDF4._netCDF4.Dataset'>\n",
-      "root group (NETCDF3_CLASSIC data model, file format NETCDF3):\n",
-      "    creation_date: Wed Jun 29 01:57:31 UTC 2016\n",
-      "    NCL_Version: 6.2.1\n",
-      "    system: Linux mrms-ldm 2.6.32-642.1.1.el6.x86_64 #1 SMP Tue May 31 21:57:07 UTC 2016 x86_64 x86_64 x86_64 GNU/Linux\n",
-      "    Conventions: None\n",
-      "    grib_source: MRMS_NLDN_LightningDensity_015_min_20160628-170113.grib2\n",
-      "    title: NCL: convert-GRIB-to-netCDF\n",
-      "    dimensions(sizes): lat_0(3500), lon_0(7000)\n",
-      "    variables(dimensions): float32 \u001b[4mVAR_209_2_2_P0_L102_GLL0\u001b[0m(lat_0,lon_0), float32 \u001b[4mlat_0\u001b[0m(lat_0), float32 \u001b[4mlon_0\u001b[0m(lon_0)\n",
-      "    groups: \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ncF = Dataset(nc_file_path, mode = 'r')\n",
     "print ncF"
@@ -333,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -346,108 +246,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((3500, 7000), (3500,), (7000,))"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var.shape, lat.shape, lon.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]], dtype=float32)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var[:10, :10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 54.99499893,  49.99499893,  44.99499893,  39.99499893,\n",
-       "        34.99499893,  29.99500084,  24.99500084], dtype=float32)"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lat[:-1:500]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 230.00500488,  235.00500488,  240.00500488,  245.00500488,\n",
-       "        250.00500488,  255.00500488,  260.00500488,  265.00500488,\n",
-       "        270.00500488,  275.00500488,  280.00500488,  285.00500488,\n",
-       "        290.00500488,  295.00500488], dtype=float32)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lon[:-1:500]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -458,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -469,132 +312,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'1st': {'2nd': {'3rd': 4, '4th': 5}}}"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[u'Conventions',\n",
-       " u'NCL_Version',\n",
-       " '__class__',\n",
-       " '__delattr__',\n",
-       " '__doc__',\n",
-       " '__enter__',\n",
-       " '__exit__',\n",
-       " '__format__',\n",
-       " '__getattr__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__new__',\n",
-       " '__orthogonal_indexing__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__unicode__',\n",
-       " '_enddef',\n",
-       " '_grpid',\n",
-       " '_isopen',\n",
-       " '_redef',\n",
-       " 'close',\n",
-       " 'cmptypes',\n",
-       " 'createCompoundType',\n",
-       " 'createDimension',\n",
-       " 'createEnumType',\n",
-       " 'createGroup',\n",
-       " 'createVLType',\n",
-       " 'createVariable',\n",
-       " u'creation_date',\n",
-       " 'data_model',\n",
-       " 'delncattr',\n",
-       " 'dimensions',\n",
-       " 'disk_format',\n",
-       " 'enumtypes',\n",
-       " 'file_format',\n",
-       " 'filepath',\n",
-       " 'get_variables_by_attributes',\n",
-       " 'getncattr',\n",
-       " u'grib_source',\n",
-       " 'groups',\n",
-       " 'isopen',\n",
-       " 'keepweakref',\n",
-       " 'ncattrs',\n",
-       " 'parent',\n",
-       " 'path',\n",
-       " 'renameAttribute',\n",
-       " 'renameDimension',\n",
-       " 'renameGroup',\n",
-       " 'renameVariable',\n",
-       " 'set_auto_mask',\n",
-       " 'set_auto_maskandscale',\n",
-       " 'set_auto_scale',\n",
-       " 'set_fill_off',\n",
-       " 'set_fill_on',\n",
-       " 'setncattr',\n",
-       " 'setncatts',\n",
-       " 'sync',\n",
-       " u'system',\n",
-       " u'title',\n",
-       " 'variables',\n",
-       " 'vltypes']"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dir(ncF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "VAR_209_2_2_P0_L102_GLL0\n",
-      "lat_0\n",
-      "lon_0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for keys in ncF.variables:\n",
     "    print keys"
@@ -602,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -614,51 +358,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1, 2, 1), (1, 2, 1))"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a.shape, b.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 2, 2)"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.dstack([a, b]).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -669,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -681,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -692,29 +414,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'MRMS_Reflectivity_-10C_00.50'"
-      ]
-     },
-     "execution_count": 201,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_list[1].split('_20160628-')[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -731,22 +442,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 2)"
-      ]
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = [[1, 2], [3, 4]]\n",
     "w =np.array(m)\n",
@@ -755,48 +455,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1],\n",
-       "       [2],\n",
-       "       [3],\n",
-       "       [4]])"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "w.reshape(4,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4]])"
-      ]
-     },
-     "execution_count": 204,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "w"
    ]
